# tasks

./: Cargo.toml  README.md
src/: config.rs  filter.rs  list.rs  main.rs  popup.rs  storage.rs
src/storage/: editing.rs  keyboard_edit.rs  span_edit.rs  text_edit.rs
src/tui/: app.rs  filter.rs  mod.rs  popup.rs  table.rs  task.rs
src/tui/task/: editor.rs  scrollbar.rs  tags.rs
