[package]
name = "tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["alloc", "std", "clock", "serde"] }
chumsky = "0.11.2"
crop = "0.4.3"
directories = "6.0.0"
eyre = "0.6.12"
ratatui = "0.29.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
textwrap = "0.16.2"
toml = "0.9.8"
tui-textarea = "0.7.0"
